FIX home component section overflow

--- a/src/app/core/components/home/home.component.scss
+++ b/src/app/core/components/home/home.component.scss
@@ -30,6 +30,19 @@
   .section_content {
     display: flex;
     gap: 16px;
+    overflow-x: auto;
+    padding: 24px 0;
+
+    &::-webkit-scrollbar {
+      width: 4px;
+      height: 4px;
+      background-color: var(--color-scrollbar);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: var(--color-scrollbar-thumb);
+      border-radius: 8px;
+    }
   }
 
   .view_more_button {
